--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "apollo-link-context": "^1.0.8",
     "apollo-link-error": "^1.1.0",
     "apollo-link-http": "^1.5.4",
+    "apollo-upload-client": "^10.0.0",
     "autoprefixer": "7.1.6",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
@@ -41,9 +42,11 @@
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
     "promise": "8.0.1",
+    "prop-types": "latest",
     "raf": "3.4.0",
     "react": "^16.4.2",
     "react-apollo": "^2.1.11",
+    "react-avatar-edit": "^0.7.1",
     "react-dev-utils": "^5.0.2",
     "react-dom": "^16.4.2",
     "react-flexbox-grid": "^2.1.2",
@@ -59,8 +62,7 @@
     "webpack": "3.8.1",
     "webpack-dev-server": "^2.11.3",
     "webpack-manifest-plugin": "1.3.2",
-    "whatwg-fetch": "2.0.3",
-    "prop-types": "latest"
+    "whatwg-fetch": "2.0.3"
   },
   "jest": {
     "collectCoverageFrom": [
