--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "react-simple-auth": "^1.0.0",
+    "react-string-replace": "^0.4.1",
     "redux": "^4.0.0",
     "redux-logger": "^3.0.6",
     "resolve": "1.6.0",
